# renamer

./: Cargo.toml  docker-compose.yml
.github/workflows/: release.yml
src/: file_ops.rs  main.rs  tasks.rs  ui.rs
